--- a/index.html
+++ b/index.html
@@ -8,4 +8,19 @@
     <title>mr. roboger's neighborhood</title>
 </head>
 
+<body>
+    <h1>Won't you be my neighbor?</h1>
+
+    <form id="mrRobogersForm">
+        <label for="userNumberInput">Enter Any Number!</label>
+        <input id="userNumberInput" type="text" name="userNumberInput">
+
+        <button type="submit">You are special!</button>
+    </form>
+
+    <section>
+        <div>Mr. Robogers Says: <span id="robogersOutput"></span></div>
+    </section>
+</body>
+
 </html>
