--- a/index.html
+++ b/index.html
@@ -11,16 +11,25 @@
 <body>
     <h1>Won't you be my neighbor?</h1>
 
-    <form id="mrRobogersForm">
-        <label for="userNumberInput">Enter Any Number!</label>
-        <input id="userNumberInput" type="text" name="userNumberInput">
+    <div class="robogersFormStyle">
+        <form id="mrRobogersForm">
+            <label for="userNumberInput">Enter Any Number!</label>
+            <input id="userNumberInput" type="text" name="userNumberInput">
 
-        <button type="submit">You are special!</button>
-    </form>
+            <button type="submit">You are special!</button>
+        </form>
+    </div>
 
     <section>
-        <div>Mr. Robogers Says: <span id="robogersOutput"></span></div>
+        <div class="robogersOutputStyle">Mr. Robogers Says: <span id="robogersOutput"></span></div>
     </section>
+
+    <!-- <div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YaSwwPDDHz8?si=VfGay6h9o_tuIjpi"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+    </div> -->
 </body>
 
 </html>
