add background image & content styling

--- a/index.html
+++ b/index.html
@@ -11,18 +11,23 @@
 <body>
     <h1>Won't you be my neighbor?</h1>
 
-    <div class="robogersFormStyle">
-        <form id="mrRobogersForm">
-            <label for="userNumberInput">Enter Any Number!</label>
-            <input id="userNumberInput" type="text" name="userNumberInput">
+    <div class="boxAlign">
+        <div class=box>
+            <div class="robogersFormStyle">
+                <form id="mrRobogersForm">
+                    <label for="userNumberInput">Enter Any Number!</label>
+                    <input id="userNumberInput" type="text" name="userNumberInput">
 
-            <button type="submit">You are special!</button>
-        </form>
+                    <button type="submit">You are special!</button>
+                </form>
+            </div>
+
+            <section>
+                <div class="robogersOutputStyle">Mr. Robogers Says: <span id="robogersOutput"></span></div>
+            </section>
+        </div>
     </div>
 
-    <section>
-        <div class="robogersOutputStyle">Mr. Robogers Says: <span id="robogersOutput"></span></div>
-    </section>
 
     <!-- <div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YaSwwPDDHz8?si=VfGay6h9o_tuIjpi"
