beging styling with bootstrap

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-    <!-- <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <script src="js/scripts.js"></script>
     <title>mr. roboger's neighborhood</title>
@@ -19,7 +19,7 @@
                     <label for="userNumberInput">Enter Any Number!</label>
                     <input id="userNumberInput" type="text" name="userNumberInput">
 
-                    <button type="submit">You are special!</button>
+                    <button type="submit" class="btn btn-danger">You are special!</button>
                 </form>
             </div>
 
