--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <label for="userNumberInput">Enter Any Number!</label>
                     <input id="userNumberInput" type="text" name="userNumberInput">
 
-                    <button type="submit" class="btn btn-danger">You are special!</button>
+                    <button type="submit" class="btn btn-danger btn-sm">You are special!</button>
                 </form>
             </div>
 
@@ -28,14 +28,5 @@
             </section>
         </div>
     </div>
-
-
-    <!-- <div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/YaSwwPDDHz8?si=VfGay6h9o_tuIjpi"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
-    </div> -->
-</body>
 
 </html>
