style form fonts

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <label for="userNumberInput">Enter Any Number!</label>
                     <input id="userNumberInput" type="text" name="userNumberInput">
 
-                    <button type="submit" class="btn btn-danger btn-sm">You are special!</button>
+                    <button type="submit" class="btn btn-danger">You are special!</button>
                 </form>
             </div>
 
