try out image addition, WIP

--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
             </section>
         </div>
     </div>
+    <div>
+        <!-- <div class="img"><img
+                src="https://raw.githubusercontent.com/ambientscreaming/mr-roboger-s-neighborhood/main/Screenshot%202023-11-17%20at%203.07.08%20AM.png"
+                alt="AI generated cartoon image of mister rogers as a robot">
+        </div> -->
 
 </html>
