add trolley animation successfullygit add .

--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
             </section>
         </div>
     </div>
+    <div id="myAnimationContainer">
+        <img src="https://raw.githubusercontent.com/ambientscreaming/mr-roboger-s-neighborhood/main/image_processing20200424-29859-117nqh9.png"
+            class="trolley" id="trolley" alt="trolley car">
+    </div>
 
 </html>
